--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,4 +1,4 @@
-<aside class="site sidebar">
+<aside class="site-sidebar">
   <h2>Recent Posts</h2>
   <ul>
     {% for post in site.posts limit:5 site.recent_posts %}
