Addition of google analytics

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,9 @@
 
     <nav class="site-nav">
       <span class="menu-icon">
-        <div id="lines" class="btn"></div>
+        <svg viewBox="0 0 18 15" width="18px" height="15px">
           <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+        </svg>
       </span>
 
       <div class="trigger">
