--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 
 
   
-  {% if jekyll.environment == 'production' and site.google_analytics %}
-  {% include google-analytics.html %}
+  {% if site.google_analytics and jekyll.environment == 'production' %}
+  {% include analytics.html %}
   {% endif %}
 </head>
