--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -52,7 +52,6 @@
     border: 1px solid $grey-color-light;
     border-radius: 5px;
     text-align: right;
- 
 
     .menu-icon {
       display: block;
@@ -77,6 +76,10 @@
       display: block;
       padding-bottom: 5px;
     }
+&:active .trigger {
+      display: block;
+      padding-bottom: 5px;
+    }
 
     .page-link {
       display: block;
@@ -92,7 +95,7 @@
   }
 }
 
-
+ 
 /**
  * Site footer
  */
