--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -36,7 +36,7 @@ $on-laptop:        800px !default;
 }
 
 // Import partials.
-@import
+@use
   "minima/base",
   "minima/layout",
   "minima/syntax-highlighting"
