--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,10 +4,10 @@ layout: default
 
 <div class="home">
   <h2 class="page-heading">Travels</h2>
-  <a href="http://www.shegoesplaces.co.uk/travels.html" title="Travels">Travels</a>
+  <a href="http://www.shegoesplaces.co.uk/travels/" title="Travels">Travels</a>
   <h2 class="page-heading">Running</h2>
 
-  <a href="http://www.shegoesplaces.co.uk/running.html" title="Running">Running</a>
+  <a href="http://www.shegoesplaces.co.uk/running/" title="Running">Running</a>
   <p></p>
   
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
