--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@ layout: default
 
   <div class="col-md-4">
       <div class="thumbnail">
-        <a href="https://www.shegoesplaces.co.uk/_pages/2016-12-03-australian-east-coast.html/" target="_blank">
+        <a href="https://www.shegoesplaces.co.uk/AustralianEastCoast/" target="_blank">
             <img src="{{ site.baseurl }}/assets/front-page/abeltasman.jpg" alt="Abel Tasman" style="width:100%">
             </a>
       </div>
