--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,47 +5,62 @@ layout: default
 <meta name="viewport" content="width=device-width, initial-scale=1">
     
 <div class="home">
-  <h2 class="page-heading"><a href="https://www.shegoesplaces.co.uk/travels/" title="Travels">Travels</a></h2>
-  <h2 class="page-heading"><a href="https://www.shegoesplaces.co.uk/running/" title="Running">Running</a></h2>
-  <p></p>
-  
   <div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="thumbnail">
+              <a href="https://www.shegoesplaces.co.uk/travels/" target="_blank">
+                <img src="{{ site.baseurl }}/assets/Vesta.JPG" alt="Vesta, the campervan" style="width:100%">
+              </a>
+              <p>Travel posts</p>
+            </div>
+        </div>
+        
+        <div class="col-md-4">
+            <div class="thumbnail">
+              <a href="https://www.shegoesplaces.co.uk/running/" target="_blank">
+                <img src="{{ site.baseurl }}/assets/IMG_3424.jpeg" alt="Running route" style="width:100%">
+              </a>
+              <p>Running posts</p>
+            </div>
+        </div>
+    </div>
+    
   <div class="row">
     <div class="col-md-4">
       <div class="thumbnail">
         <a href="https://www.shegoesplaces.co.uk/NewZealand/" target="_blank">
           <img src="{{ site.baseurl }}/assets/front-page/abeltasman.jpg" alt="Abel Tasman" style="width:100%">
         </a>
+        <p>New Zealand photo gallery</p>
       </div>
     </div>
 
   <div class="col-md-4">
       <div class="thumbnail">
         <a href="https://www.shegoesplaces.co.uk/AustralianEastCoast/" target="_blank">
-            <img src="{{ site.baseurl }}/assets/front-page/abeltasman.jpg" alt="Abel Tasman" style="width:100%">
+            <img src="{{ site.baseurl }}/assets/P5050729.JPG" alt="Sydney" style="width:100%">
             </a>
-      </div>
-    </div>
-  
-  <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="https://www.shegoesplaces.co.uk/AWanderThroughWellington" target="_blank">
-          <img src="{{ site.baseurl }}/assets/front-page/abeltasmankayak.jpg" alt="Kayaking Abel Tasman" style="width:100%">
-        </a>
+        <p>Australian East Coast photo gallery</p>
       </div>
     </div>
   </div>
+  
+  <div class="row">
+      <div class="col-md-4">
+          <div class="thumbnail">
+              <a href="https://www.shegoesplaces.co.uk/AWanderThroughWellington/" target="_blank">
+          <img src="{{ site.baseurl }}/assets/front-page/welly.jpg" alt="Wellington Harbour" style="width:100%">
+              </a>
+              <p>"A wander through Wellington" photo gallery</p>
+          </div>
+      </div>
+    </div>
  
  <p align="JUSTIFY">&nbsp;</p>
  <p align="JUSTIFY">&nbsp;</p>
- <p align="JUSTIFY">&nbsp;</p>
- <p align="JUSTIFY">&nbsp;</p>
- <p align="JUSTIFY">&nbsp;</p>
- <p align="JUSTIFY">&nbsp;</p>
- <p align="JUSTIFY">&nbsp;</p>
- <p align="JUSTIFY">&nbsp;</p>
- <p align="JUSTIFY">&nbsp;</p>
- <p align="JUSTIFY">&nbsp;</p>
+
+ 
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
 </div>
