--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,14 +1,14 @@
-<aside class="site-sidebar">
-  <div class="module">
-  <header class="block-module-header">
-    <h3>RECENT POSTS</h3>
-  </header>
-      <ul>
-        {% for post in site.posts limit:6 site.recent_posts %}
-        <li>
-          <a href="{{ site.github.url }}{{ post.url }}">{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a>
-        </li>
-    {% endfor %}
-      </ul>
+#<aside class="site-sidebar">
+ # <div class="module">
+  #<header class="block-module-header">
+    #<h3>RECENT POSTS</h3>
+  #</header>
+      #<ul>
+        #{% for post in site.posts limit:6 site.recent_posts %}
+        #<li>
+          #<a href="{{ site.github.url }}{{ post.url }}">{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a>
+        #</li>
+    #{% endfor %}
+      #</ul>
 
 
